import sass in project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>Hello world!!!</p>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <title>Borodinsky</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+      <p>
+        <span>Polina llalalal</span>
+      </p>
+  </body>
+</html>
