--- a/price.html
+++ b/price.html
@@ -22,7 +22,7 @@
         <li><a href="#">войти</a></li>
       </ul>
 
-      <a href="index.html"><img src="#" alt="Логотип барбершопа «Бородинский»"></a>
+      <a href="index.html"><img src="./img/logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
     </nav>
   </header>
 
