--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
         <li><a href="#">войти</a></li>
       </ul>
 
-      <a href="index.html"><img src="#" alt="Логотип барбершопа «Бородинский»"></a>
+      <a href="index.html"><img src="./img/logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
     </nav>
   </header>
 
@@ -97,7 +97,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>набор для путешествий «baxter of california»</h3>
-            <p><img src="#" alt="baxter of california"></p>
+            <p><img src="./img/product-1.jpg" width="220" height="165" alt="baxter of california"></p>
           </a>
           <p>
             <span>2 900 ₽</span>
@@ -108,7 +108,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>увлажняющий кондиционер «baxter of california»</h3>
-            <img src="#" alt="увлажняющий кондиционер">
+            <img src="./img/product-2.jpg" width="220" height="165" alt="увлажняющий кондиционер">
           </a>
           <p>
             <span>750 ₽</span>
@@ -119,7 +119,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>гель для волос «suavecito»</h3>
-            <img src="#" alt="гель для волос">
+            <img src="./img/product-3.jpg" width="220" height="165" alt="гель для волос">
           </a>
           <p>
             <span>290 ₽</span>
@@ -130,7 +130,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>глина для укладки волос «american crew»</h3>
-            <img src="#" alt="глина для укладки волос">
+            <img src="./img/product-4.jpg" width="220" height="165" alt="глина для укладки волос">
           </a>
           <p>
             <span>500 ₽</span>
@@ -141,7 +141,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>гель для волос «american crew»</h3>
-            <img src="#" alt="гель для волос">
+            <img src="./img/product-5.jpg" width="220" height="165" alt="гель для волос">
           </a>
           <p>
             <span>300 ₽</span>
@@ -152,7 +152,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>набор для бритья «baxter of california»</h3>
-            <img src="#" alt="набор для бритья">
+            <img src="./img/product-6.jpg" width="220" height="165" alt="набор для бритья">
           </a>
           <p>
             <span>3 900 ₽</span>
