--- a/catalog-item.html
+++ b/catalog-item.html
@@ -22,7 +22,7 @@
         <li><a href="#">войти</a></li>
       </ul>
 
-      <a href="index.html"><img src="./img/logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
+      <a href="index.html"><img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>
     </nav>
   </header>
   <main>
@@ -37,11 +37,11 @@
 
     <section>
       <h2>Изображения товара</h2>
-      <p><img src="./img/product-big.jpg" alt="Фото всего набора" width="460" height="500"></p>
+      <p><img src="./img/product-big.jpg" width="577" height="626" alt="Фото всего набора"></p>
       <ul>
-        <li><img src="./img/product-small-1.jpeg" alt="Фото в анфас"></li>
-        <li><img src="./img/product-small-2.jpeg" alt="Фото в профиль"></li>
-        <li><img src="./img/product-small-3.jpeg" alt="Фото отдельной части"></li>
+        <li><img src="./img/product-small-1.jpeg" width="172" height="181" alt="Фото в анфас"></li>
+        <li><img src="./img/product-small-2.jpeg" width="172" height="181" alt="Фото в профиль"></li>
+        <li><img src="./img/product-small-3.jpeg" width="172" height="181" alt="Фото отдельной части"></li>
       </ul>
     </section>
 
