include link stylesheets

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
       </ul>
 
       <ul class="user-navigation">
-        <li><a href="#">войти</a></li>
+        <li><a href="#">вход</a></li>
       </ul>
 
       <a href="index.html"><img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>
@@ -108,7 +108,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>увлажняющий кондиционер «baxter of california»</h3>
-            <img src="./img/product-2.jpg" width="220" height="165" alt="увлажняющий кондиционер">
+            <p><img src="./img/product-2.jpg" width="220" height="165" alt="увлажняющий кондиционер"></p>
           </a>
           <p>
             <span>750 ₽</span>
@@ -119,7 +119,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>гель для волос «suavecito»</h3>
-            <img src="./img/product-3.jpg" width="220" height="165" alt="гель для волос">
+            <p><img src="./img/product-3.jpg" width="220" height="165" alt="гель для волос"></p>
           </a>
           <p>
             <span>290 ₽</span>
@@ -130,7 +130,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>глина для укладки волос «american crew»</h3>
-            <img src="./img/product-4.jpg" width="220" height="165" alt="глина для укладки волос">
+            <p><img src="./img/product-4.jpg" width="220" height="165" alt="глина для укладки волос"></p>
           </a>
           <p>
             <span>500 ₽</span>
@@ -141,7 +141,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>гель для волос «american crew»</h3>
-            <img src="./img/product-5.jpg" width="220" height="165" alt="гель для волос">
+            <p><img src="./img/product-5.jpg" width="220" height="165" alt="гель для волос"></p>
           </a>
           <p>
             <span>300 ₽</span>
@@ -152,7 +152,7 @@
         <li>
           <a href="catalog-item.html">
             <h3>набор для бритья «baxter of california»</h3>
-            <img src="./img/product-6.jpg" width="220" height="165" alt="набор для бритья">
+            <p><img src="./img/product-6.jpg" width="220" height="165" alt="набор для бритья"></p>
           </a>
           <p>
             <span>3 900 ₽</span>
@@ -214,7 +214,7 @@
         <a href="#">я забыл пароль!</a>
       </p>
 
-      <button type="submit">войти</button>
+      <button type="submit">вход</button>
     </form>
     <button type="button">закрыть</button>
   </section>
