--- a/catalog-item.html
+++ b/catalog-item.html
@@ -19,7 +19,7 @@
       </ul>
 
       <ul class="user-navigation">
-        <li><a href="#">войти</a></li>
+        <li><a href="#">вход</a></li>
       </ul>
 
       <a href="index.html"><img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>
@@ -122,7 +122,7 @@
         <a href="#">я забыл пароль!</a>
       </p>
 
-      <button type="submit">войти</button>
+      <button type="submit">вход</button>
     </form>
     <button type="button">закрыть</button>
   </section>
