--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8" />
   <title>Borodinsky</title>
   <link rel="stylesheet" href="stylesheets/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/vendors/_normalize.css">
 </head>
 
 <body>
   <header>
     <nav>
+      <a><img src="./img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»"></a>
       <ul class="app-navigation">
         <li><a href="#">информация</a></li>
         <li><a href="#">новости</a></li>
@@ -19,10 +22,8 @@
       </ul>
 
       <ul class="user-navigation">
-        <li><a href="#">войти</a></li>
+        <li><a href="#">вход</a></li>
       </ul>
-
-      <a><img src="./img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»"></a>
     </nav>
   </header>
 
@@ -142,6 +143,7 @@
     <p>
       барбершоп «бородинский»<br>
       адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
+      <a href="#">Как нас найти?</a><br>
       телефон: +7 (495) 666-02-66
     </p>
 
@@ -183,7 +185,7 @@
         <a href="#">я забыл пароль!</a>
       </p>
 
-      <button type="submit">войти</button>
+      <button type="submit">вход</button>
     </form>
     <button type="button">закрыть</button>
   </section>
