catalog page css

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
-<body>
+<body class="inner-page">
   <header class="page-header">
     <nav class="header-navigation">
       <a href="index.html" class="header-logo">
@@ -111,7 +111,10 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>набор для путешествий «baxter of california»</h3>
+            <h3>
+              <span class="product-category">Набор для путешествий</span>
+              <span class="product-name">«baxter of california»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-1.jpg" width="220" height="165" alt="baxter of california">
             </p>
@@ -124,7 +127,10 @@
 
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>увлажняющий кондиционер «baxter of california»</h3>
+            <h3>
+              <span class="product-category">Увлажняющий кондиционер</span>
+              <span class="product-name">«baxter of california»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-2.jpg" width="220" height="165" alt="увлажняющий кондиционер">
             </p>
@@ -137,7 +143,10 @@
 
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>гель для волос «suavecito»</h3>
+            <h3>
+              <span class="product-category">Гель для волос</span>
+              <span class="product-name">«suavecito»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-3.jpg" width="220" height="165" alt="гель для волос">
             </p>
@@ -150,7 +159,10 @@
 
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>глина для укладки волос «american crew»</h3>
+            <h3>
+              <span class="product-category">Глина для укладки волос</span>
+              <span class="product-name">«american crew»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-4.jpg" width="220" height="165" alt="глина для укладки волос">
             </p>
@@ -163,7 +175,10 @@
 
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>гель для волос «american crew»</h3>
+            <h3>
+              <span class="product-category">Гель для волос</span>
+              <span class="product-name">«american crew»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-5.jpg" width="220" height="165" alt="гель для волос">
             </p>
@@ -176,7 +191,10 @@
 
         <li class="catalog-item">
           <a href="catalog-item.html">
-            <h3>набор для бритья «baxter of california»</h3>
+            <h3>
+              <span class="product-category">Набор для бритья</span>
+              <span class="product-name">«baxter of california»</span>
+            </h3>
             <p class="catalog-item-image">
               <img src="./img/product-6.jpg" width="220" height="165" alt="набор для бритья">
             </p>
@@ -190,7 +208,7 @@
 
       <ul class="pagination-list">
         <li class="pagination-item"><a href="#">1</a></li>
-        <li class="pagination-item"> <a>2</a></li>
+        <li class="pagination-item current-page"><a>2</a></li>
         <li class="pagination-item"><a href="#">3</a></li>
         <li class="pagination-item"><a href="#">4</a></li>
       </ul>
