--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
-<body>
+<body class="inner-page">
   <header class="page-header">
     <nav class="header-navigation">
       <a href="index.html" class="header-logo">
