--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
           </a>
           <p class="catalog-item-price">
             <span>750 ₽</span>
-            <a href="#">купить</a>
+            <a class="button" href="#">купить</a>
           </p>
         </li>
 
