--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Borodinsky</title>
-  <link rel="stylesheet" href="stylesheets/main.css" />
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
 <body class="inner-page">
@@ -207,10 +207,10 @@
       </ul>
 
       <ul class="pagination-list">
-        <li class="pagination-item"><a href="#">1</a></li>
-        <li class="pagination-item current-page"><a>2</a></li>
-        <li class="pagination-item"><a href="#">3</a></li>
-        <li class="pagination-item"><a href="#">4</a></li>
+        <li><a class="pagination-link" href="#">1</a></li>
+        <li><a class="pagination-link current-link" >2</a></li>
+        <li><a class="pagination-link" href="#">3</a></li>
+        <li><a class="pagination-link" href="#">4</a></li>
       </ul>
     </section>
   </main>
