corection for css grids

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <figure class="gallery-content">
           <a href="./img/salon-room.jpg"><img src="./img/salon-room.jpg" width="286" height="164" alt="интерьер"></a>
         </figure>
-        <p class="buttuns-galery">
+        <p class="gallery-buttons">
           <button class="button gallery-button-back" type="button">назад</button>
           <button class="button gallery-button-next" type="button">вперед</button>
         </p>
